--- a/apps/web/src/components/modules/ArticleFigureModule.astro
+++ b/apps/web/src/components/modules/ArticleFigureModule.astro
@@ -12,7 +12,7 @@ if (!image) return null;
 <CaseLayout>
 	<div class="overflow-hidden">
 		<SanityImage
-			image={image}
+			image={image?.asset ?? undefined}
 			alt=""
 			width={1200}
 			class="rounded-lg object-cover w-full h-full"
