--- a/apps/web/src/pages/case/[slug].astro
+++ b/apps/web/src/pages/case/[slug].astro
@@ -1,16 +1,12 @@
 ---
+import CaseModules from "@/components/astro/CaseModules.astro";
 import HeroCase from "@/components/astro/HeroCase.astro";
-import PageModules from "@/components/astro/PageModules.astro";
 import PageLayout from "@/layouts/PageLayout.astro";
-import { PAGES_QUERY } from "@novo-holdings-annual-report-2024/studio/queries";
-import type { PAGES_QUERYResult } from "@novo-holdings-annual-report-2024/studio/types";
-import type { GetStaticPathsResult } from "astro";
-import { sanityClient } from "sanity:client";
+import { cases } from "@/scripts/queries";
+import type { GetStaticPathsResult, InferGetStaticPropsType } from "astro";
 
 export const getStaticPaths = async () => {
-	const pages = await sanityClient.fetch<PAGES_QUERYResult>(PAGES_QUERY);
-
-	const staticPaths = pages.map((page) => ({
+	const staticPaths = cases.map((page) => ({
 		params: {
 			slug: page.slug?.current ?? "404",
 		},
@@ -22,12 +18,12 @@ export const getStaticPaths = async () => {
 	return staticPaths satisfies GetStaticPathsResult;
 };
 
+export type Props = InferGetStaticPropsType<typeof getStaticPaths>;
+
 const { page } = Astro.props;
 ---
 
 <PageLayout title={page.title ?? undefined}>
-	<div class="flex flex-col max-w-[100rem] mx-auto">
-		<HeroCase {...page} />
-		<PageModules modules={page.modules} />
-	</div>
+	<HeroCase {...page} />
+	<CaseModules modules={page.modules} />
 </PageLayout>
