--- a/apps/web/src/components/astro/CaseCard.astro
+++ b/apps/web/src/components/astro/CaseCard.astro
@@ -1,20 +1,22 @@
 ---
 import SanityImage from "@/components/astro/SanityImage.astro";
 import { formatYear } from "@/scripts/helpers";
-import type { ModuleProps } from "@/scripts/types";
+import type { CaseModuleProps } from "@/scripts/queries";
 
-type Props = NonNullable<ModuleProps<"caseHighlightsModule">["cases"]>[number];
+type Props = NonNullable<
+	CaseModuleProps<"caseHighlightsModule">["cases"]
+>[number];
 
 const { title, slug, project, startDate, endDate, heroImage } = Astro.props;
 
-if (!heroImage?.asset) return null;
+if (!heroImage) return null;
 ---
 
 <a href={slug?.current ?? ""}>
 	<figure class="col-span-4 pb-[1rem]">
 		<div class="pb-[1.25rem] rounded-lg">
 			<SanityImage
-				image={heroImage?.asset ?? undefined}
+				{...heroImage}
 				alt={title ?? ""}
 				width={800}
 				class="rounded-lg w-full h-auto"
