--- a/apps/web/src/components/astro/Footer.astro
+++ b/apps/web/src/components/astro/Footer.astro
@@ -1,10 +1,8 @@
 ---
 import PrimaryButton from "@/components/astro/PrimaryButton.astro";
-import type { GLOBAL_SETTINGS_QUERYResult } from "@novo-holdings-annual-report-2024/studio/types";
+import type { GlobalSettings } from "@/scripts/queries";
 
-interface Props {
-	settings: GLOBAL_SETTINGS_QUERYResult;
-}
+type Props = GlobalSettings;
 ---
 
 <footer class="bg-novo-blue text-white w-full">
@@ -21,7 +19,6 @@ interface Props {
 				icon="arrow_outward"
 			/>
 		</div>
-
 		<nav>
 			<ul
 				class="max-w-[100rem] grid md:flex gap-4 md:gap-[2rem] font-medium text-[0.875rem] leading-[120%]"
