--- a/apps/web/src/components/modules/ArticleStatsModule.astro
+++ b/apps/web/src/components/modules/ArticleStatsModule.astro
@@ -1,8 +1,8 @@
 ---
 import CaseLayout from "@/layouts/CaseLayout.astro";
-import type { ModuleProps } from "@/scripts/types";
+import type { CaseModuleProps } from "@/scripts/queries";
 
-type Props = ModuleProps<"articleStatsModule">;
+type Props = CaseModuleProps<"articleStatsModule">;
 
 const { project, title, stats } = Astro.props;
 
