--- a/apps/web/src/components/modules/HighlightsModule.astro
+++ b/apps/web/src/components/modules/HighlightsModule.astro
@@ -2,9 +2,9 @@
 import Icon from "@/components/astro/Icon.astro";
 import SanityImage from "@/components/astro/SanityImage.astro";
 import LandingLayout from "@/layouts/LandingLayout.astro";
-import type { ModuleProps } from "@/scripts/types";
+import type { PageModuleProps } from "@/scripts/queries";
 
-type Props = ModuleProps<"highlightsModule">;
+type Props = PageModuleProps<"highlightsModule">;
 
 const { title, highlights } = Astro.props;
 
@@ -24,13 +24,15 @@ const validHighlights = highlights.filter(
 		validHighlights.map((highlight) => (
 			<figure class="col-span-4 md:col-span-6 pb-[1rem]">
 				<div class="pb-[1.25rem] rounded-lg">
-					<SanityImage
-						image={highlight.image?.asset ?? undefined}
-						alt={highlight.title ?? ""}
-						width={1200}
-						class="rounded-lg w-full h-auto"
-						sizes="(min-width: 1280px) 1200px, 100vw"
-					/>
+					{highlight.image && (
+						<SanityImage
+							{...highlight.image}
+							alt={highlight.title ?? ""}
+							width={1200}
+							class="rounded-lg w-full h-auto"
+							sizes="(min-width: 1280px) 1200px, 100vw"
+						/>
+					)}
 				</div>
 				<figcaption class="headline-card flex gap-[0.5rem] items-start hover:text-novo-blue hover:underline">
 					<span class="flex w-[2.125rem] h-[2.125rem]">
