--- a/apps/web/src/components/modules/SideBySideModule.astro
+++ b/apps/web/src/components/modules/SideBySideModule.astro
@@ -1,9 +1,9 @@
 ---
 import LandingLayout from "@/layouts/LandingLayout.astro";
-import type { ModuleProps } from "@/scripts/types";
+import type { PageModuleProps } from "@/scripts/queries";
 import SecondaryButton from "../astro/SecondaryButton.astro";
 
-type Props = ModuleProps<"sideBySideModule">;
+type Props = PageModuleProps<"sideBySideModule">;
 
 const { caption, title, description, buttonText, link } = Astro.props;
 ---
