--- a/apps/web/src/components/modules/ArticleFigureModule.astro
+++ b/apps/web/src/components/modules/ArticleFigureModule.astro
@@ -15,7 +15,7 @@ if (!image) return null;
 			{...image}
 			alt=""
 			width={1200}
-			class="rounded-lg object-cover w-full h-full"
+			class="h-full w-full rounded-lg object-cover"
 			sizes="(min-width: 1280px) 1200px, 100vw"
 		/>
 	</div>
