--- a/apps/web/src/components/modules/ArticleQuoteModule.astro
+++ b/apps/web/src/components/modules/ArticleQuoteModule.astro
@@ -21,7 +21,7 @@ const { quote, author, jobTitle, image } = Astro.props;
 							{...image}
 							alt={author ?? ""}
 							width={1200}
-							class="rounded-lg object-cover w-full h-full"
+							class="h-full w-full rounded-lg object-cover"
 							sizes="(min-width: 1280px) 1200px, 100vw"
 						/>
 					)}
