--- a/apps/web/src/components/modules/ArticleStatsModule.astro
+++ b/apps/web/src/components/modules/ArticleStatsModule.astro
@@ -11,10 +11,10 @@ if (!stats?.length) return null;
 
 <CaseLayout>
 	<div
-		class="p-[1.25rem] md:pl-[1.75rem] bg-[hsla(200,50%,83%,0.25)] rounded-lg col-span-4 md:col-span-6 md:col-start-4"
+		class="col-span-4 rounded-lg bg-[hsla(200,50%,83%,0.25)] p-[1.25rem] md:col-span-6 md:col-start-4 md:pl-[1.75rem]"
 	>
 		<h4
-			class="text-[1.5rem] md:text-[1.75rem] leading-[115%] pb-[4rem] md:pb-[3rem]"
+			class="pb-[4rem] text-[1.5rem] leading-[115%] md:pb-[3rem] md:text-[1.75rem]"
 		>
 			<span class="font-bold">{project}</span>{title}
 		</h4>
