--- a/apps/web/src/components/modules/CaseHighlightsModule.astro
+++ b/apps/web/src/components/modules/CaseHighlightsModule.astro
@@ -11,7 +11,7 @@ if (!cases?.length) return null;
 ---
 
 <LandingLayout>
-	<h3 class="headline-extralight mb-[0.5rem] md:mb-[1.5rem] col-span-full">
+	<h3 class="headline-extralight col-span-full mb-[0.5rem] md:mb-[1.5rem]">
 		{title}
 	</h3>
 
