--- a/apps/web/src/layouts/CaseLayout.astro
+++ b/apps/web/src/layouts/CaseLayout.astro
@@ -4,7 +4,7 @@ import MainLayout from "@/layouts/MainLayout.astro";
 
 <MainLayout>
 	<section
-		class="col-span-full md:col-span-6 md:col-start-4 mb-[4rem] md:mb-[6rem]"
+		class="col-span-full mb-[4rem] md:col-span-6 md:col-start-4 md:mb-[6rem]"
 	>
 		<slot />
 	</section>
