--- a/apps/web/src/components/astro/HeroCase.astro
+++ b/apps/web/src/components/astro/HeroCase.astro
@@ -12,7 +12,7 @@ const { title, heroImage, project, startDate, endDate } = Astro.props;
 <MainLayout>
 	<section class="col-span-full">
 		<p
-			class="flex gap-4 md:gap-[1.5rem] items-center pb-[0.5rem] md:pb-[0.75rem] paragraph-secondary text-novo-blue"
+			class="paragraph-secondary text-novo-blue flex items-center gap-4 pb-[0.5rem] md:gap-[1.5rem] md:pb-[0.75rem]"
 		>
 			<span>{project}</span>
 			<span>
