--- a/apps/web/src/components/modules/HighlightsModule.astro
+++ b/apps/web/src/components/modules/HighlightsModule.astro
@@ -17,25 +17,25 @@ const validHighlights = highlights.filter(
 ---
 
 <LandingLayout>
-	<h3 class="headline-extralight mb-[0.5rem] md:mb-[1.5rem] col-span-full">
+	<h3 class="headline-extralight col-span-full mb-[0.5rem] md:mb-[1.5rem]">
 		{title}
 	</h3>
 	{
 		validHighlights.map((highlight) => (
-			<figure class="col-span-4 md:col-span-6 pb-[1rem]">
-				<div class="pb-[1.25rem] rounded-lg">
+			<figure class="col-span-4 pb-[1rem] md:col-span-6">
+				<div class="rounded-lg pb-[1.25rem]">
 					{highlight.image && (
 						<SanityImage
 							{...highlight.image}
 							alt={highlight.title ?? ""}
 							width={1200}
-							class="rounded-lg w-full h-auto"
+							class="h-auto w-full rounded-lg"
 							sizes="(min-width: 1280px) 1200px, 100vw"
 						/>
 					)}
 				</div>
-				<figcaption class="headline-card flex gap-[0.5rem] items-start hover:text-novo-blue hover:underline">
-					<span class="flex w-[2.125rem] h-[2.125rem]">
+				<figcaption class="headline-card hover:text-novo-blue flex items-start gap-[0.5rem] hover:underline">
+					<span class="flex h-[2.125rem] w-[2.125rem]">
 						<Icon icon="arrow_outward" />
 					</span>
 					{highlight.title}
