--- a/apps/web/src/components/astro/Link.astro
+++ b/apps/web/src/components/astro/Link.astro
@@ -1,32 +1,31 @@
 ---
-interface Props {
-	link?: {
-		url?: string;
-		external?: boolean;
-		mailto?: boolean;
-		phone?: boolean;
-	};
+import type { GlobalSettings } from "@/scripts/queries";
+import type { HTMLAttributes } from "astro/types";
+
+interface Props extends HTMLAttributes<"a"> {
+	link?: Partial<NonNullable<GlobalSettings["header"]>["callToAction"]>;
 }
 
-const { link } = Astro.props;
+const { link, ...props } = Astro.props;
+const { mailto, tel, external, slug } = link ?? {};
 ---
 
 {
-	link ?
-		link.mailto ?
-			<a href={`mailto:${link.url}`}>
-				<slot />
-			</a>
-		: link.phone ?
-			<a href={`tel:${link.url}`}>
-				<slot />
-			</a>
-		: link.external ?
-			<a href={link.url} target="_blank" rel="noopener noreferrer">
-				<slot />
-			</a>
-		:	<a href={link.url}>
-				<slot />
-			</a>
+	mailto ?
+		<a href={`mailto:${mailto}`} {...props}>
+			<slot />
+		</a>
+	: tel ?
+		<a href={`tel:${tel}`} {...props}>
+			<slot />
+		</a>
+	: external ?
+		<a href={external} target="_blank" rel="noopener noreferrer" {...props}>
+			<slot />
+		</a>
+	: slug ?
+		<a href={`/${slug}`} {...props}>
+			<slot />
+		</a>
 	:	<slot />
 }
