--- a/apps/web/src/components/modules/NewsModule.astro
+++ b/apps/web/src/components/modules/NewsModule.astro
@@ -1,14 +1,11 @@
 ---
-import { VideoPlayer } from "@/components/solid/video-player";
+import Video from "@/components/astro/Video.astro";
 import LandingLayout from "@/layouts/LandingLayout.astro";
-import { buildSanityImage } from "@/scripts/image-url-builder";
 import type { PageModuleProps } from "@/scripts/queries";
 
 type Props = PageModuleProps<"newsModule">;
 
 const { caption, title, description, video } = Astro.props;
-
-const thumbnailSrc = buildSanityImage(video?.thumbnail?.asset);
 ---
 
 <LandingLayout>
@@ -20,13 +17,6 @@ const thumbnailSrc = buildSanityImage(video?.thumbnail?.asset);
 		<p class="paragraph-main pb-12">{description}</p>
 	</div>
 	<div class="relative col-span-4 md:col-span-6">
-		<VideoPlayer
-			client:load
-			src={video?.src ?? ""}
-			alt={video?.callToAction ?? ""}
-			thumbnailSrc={thumbnailSrc}
-			thumbnailAlt={video?.thumbnail?.alt ?? ""}
-			callToAction={video?.callToAction}
-		/>
+		<Video {...video} />
 	</div>
 </LandingLayout>
