--- a/apps/web/src/layouts/PageLayout.astro
+++ b/apps/web/src/layouts/PageLayout.astro
@@ -2,7 +2,7 @@
 import Footer from "@/components/astro/Footer.astro";
 import Header from "@/components/astro/Header.astro";
 import Router from "@/components/astro/Router.astro";
-import { globalSettings } from "@/scripts/queries";
+import { globalSettingsResult } from "@/scripts/queries";
 import "@/styles/global.css";
 
 interface Props {
@@ -11,11 +11,13 @@ interface Props {
 
 const { title } = Astro.props;
 
-if (!globalSettings[0]) {
+const [globalSettings] = await globalSettingsResult;
+
+if (!globalSettings) {
 	throw new Error("Global settings not found");
 }
 
-const { globalTitle } = globalSettings[0];
+const { globalTitle } = globalSettings;
 
 const pageTitle = title ? `${title} | ${globalTitle}` : globalTitle;
 ---
@@ -32,13 +34,13 @@ const pageTitle = title ? `${title} | ${globalTitle}` : globalTitle;
 		<title>{pageTitle}</title>
 	</head>
 	<body class="min-h-screen bg-white">
-		<Header {...globalSettings[0]} />
+		<Header {...globalSettings} />
 		<main class="w-full">
 			<div class="mx-auto flex max-w-[100rem] flex-col">
 				<slot />
 			</div>
 		</main>
-		<Footer {...globalSettings[0]} />
+		<Footer {...globalSettings} />
 		<div id="portal" class="absolute z-2 h-0 w-0"></div>
 	</body>
 </html>
