--- a/apps/web/src/pages/case/[slug].astro
+++ b/apps/web/src/pages/case/[slug].astro
@@ -2,11 +2,11 @@
 import CaseModules from "@/components/astro/CaseModules.astro";
 import HeroCase from "@/components/astro/HeroCase.astro";
 import PageLayout from "@/layouts/PageLayout.astro";
-import { cases } from "@/scripts/queries";
+import { casesResult } from "@/scripts/queries";
 import type { GetStaticPathsResult, InferGetStaticPropsType } from "astro";
 
 export const getStaticPaths = async () => {
-	const staticPaths = (await cases).map((page) => ({
+	const staticPaths = (await casesResult).map((page) => ({
 		params: {
 			slug: page.slug ?? "404",
 		},
